--- a/app/src/main/res/layout/game_first_exr.xml
+++ b/app/src/main/res/layout/game_first_exr.xml
@@ -24,17 +24,17 @@
 
             <RelativeLayout
                 android:id="@+id/relative_startgame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="908dp"
+                android:layout_height="365dp"
+                android:background="@color/colorPrimary"
                 app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <android.support.constraint.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
 
                 </android.support.constraint.ConstraintLayout>
@@ -42,19 +42,18 @@
 
             <RelativeLayout
                 android:id="@+id/relativeLayout2"
-                android:layout_width="wrap_content"
-                android:layout_height="140dp"
-                android:layout_marginStart="3dp"
-                android:layout_marginBottom="26dp"
+                android:layout_width="821dp"
+                android:layout_height="44dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.571"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/relative_startgame">
+                app:layout_constraintTop_toBottomOf="@+id/relative_startgame"
+                app:layout_constraintVertical_bias="1.0">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="615dp"
-                    android:minHeight="250dp">
+                    android:layout_height="39dp">
 
                     <android.support.constraint.Guideline
                         android:id="@+id/guideline13"
@@ -69,49 +68,38 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="67dp"
                         android:text="досвід-0"
                         android:textAlignment="center"
                         android:textColor="@color/colorPrimary"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:visibility="visible"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.97"
+                        app:layout_constraintHorizontal_bias="0.956"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.645" />
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <Button
                         android:id="@+id/attack"
                         android:layout_width="118dp"
-                        android:layout_height="63dp"
+                        android:layout_height="41dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp"
                         android:text="вогонь"
                         android:textSize="6sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.231" />
+                        app:layout_constraintVertical_bias="0.0" />
 
                     <Button
                         android:id="@+id/toGameActivity"
                         android:layout_width="wrap_content"
                         android:layout_height="31dp"
-                        android:layout_marginStart="40dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginBottom="93dp"
                         android:onClick="onClick"
                         android:text="назад"
                         android:textSize="8sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/attack"
-                        app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -119,12 +107,5 @@
             </RelativeLayout>
         </android.support.constraint.ConstraintLayout>
     </RelativeLayout>
-
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="574dp" />
 
 </android.support.constraint.ConstraintLayout>
